# YukonSolitary

./: .gitignore  CMakeLists.txt  Cards.txt  Data.c  Display.c  Header.h  Interface_Header.h  Logic.c  Logic_Header.h  PlayerInput.c  Reader.c  main.c  structs.c
Data/: Data.c  Data_Header.h
Interface/: Display.c  Display_Header.h  Interface_Header.h  Reader.c  Reader_Header.h
Logic/: GameController.c  GameController_Header.h  Header.h  Logic.c  Logic_Header.h  PlayGame.c  PlayGame_Header.h  PreGameOperation.c  PreGameOperation_Header.h  ProgramController.c  ProgramController_Header.h  functionDrafts.c  linkedListFunctionality.c  structs.c
